file(GLOB_RECURSE scratches  ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)


set(DONT_BUILD
   )

foreach(scratch_src ${scratches})
    get_filename_component(scratch_name ${scratch_src} NAME)
    string(REGEX REPLACE "\\.[^.]*$" "" scratch_name ${scratch_name})

    string(FIND "${DONT_BUILD}" "${scratch_name}" res)

    if(res LESS 0)
        add_executable(${scratch_name} "${scratch_src}")
    target_link_libraries(${scratch_name} "${ns3-libs}" "${ns3-contrib-libs}")
    endif()
endforeach()


#add_executable(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_noAttackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json_noMarkov___Harmonic_noAttackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov_noHarmonic_noAttackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov___Harmonic_noAttackers collaborative_sensing_demonstration_json.cc)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_noAttackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=0)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov___Harmonic_noAttackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=0)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov_noHarmonic_noAttackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=0)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov___Harmonic_noAttackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=0)
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_noAttackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov___Harmonic_noAttackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov_noHarmonic_noAttackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov___Harmonic_noAttackers "${ns3-libs}")
#
#add_executable(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_01Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json_noMarkov___Harmonic_01Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov_noHarmonic_01Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov___Harmonic_01Attackers collaborative_sensing_demonstration_json.cc)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_01Attackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=1)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov___Harmonic_01Attackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=1)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov_noHarmonic_01Attackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=1)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov___Harmonic_01Attackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=1)
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_01Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov___Harmonic_01Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov_noHarmonic_01Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov___Harmonic_01Attackers "${ns3-libs}")
#
#add_executable(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_02Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json_noMarkov___Harmonic_02Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov_noHarmonic_02Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov___Harmonic_02Attackers collaborative_sensing_demonstration_json.cc)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_02Attackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=2)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov___Harmonic_02Attackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=2)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov_noHarmonic_02Attackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=2)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov___Harmonic_02Attackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=2)
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_02Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov___Harmonic_02Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov_noHarmonic_02Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov___Harmonic_02Attackers "${ns3-libs}")
#
#add_executable(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_05Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json_noMarkov___Harmonic_05Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov_noHarmonic_05Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov___Harmonic_05Attackers collaborative_sensing_demonstration_json.cc)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_05Attackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=5)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov___Harmonic_05Attackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=5)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov_noHarmonic_05Attackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=5)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov___Harmonic_05Attackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=5)
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_05Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov___Harmonic_05Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov_noHarmonic_05Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov___Harmonic_05Attackers "${ns3-libs}")
#
#add_executable(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_10Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json_noMarkov___Harmonic_10Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov_noHarmonic_10Attackers collaborative_sensing_demonstration_json.cc)
#add_executable(collaborative_sensing_demonstration_json___Markov___Harmonic_10Attackers collaborative_sensing_demonstration_json.cc)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_10Attackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=10)
#target_compile_definitions(collaborative_sensing_demonstration_json_noMarkov___Harmonic_10Attackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=0 -DATTACKERS_PER_CHANNEL=10)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov_noHarmonic_10Attackers PUBLIC -DHARMONIC_DETECTION=0 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=10)
#target_compile_definitions(collaborative_sensing_demonstration_json___Markov___Harmonic_10Attackers PUBLIC -DHARMONIC_DETECTION=1 -DMARKOV_DETECTION=1 -DATTACKERS_PER_CHANNEL=10)
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov_noHarmonic_10Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json_noMarkov___Harmonic_10Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov_noHarmonic_10Attackers "${ns3-libs}")
#target_link_libraries(collaborative_sensing_demonstration_json___Markov___Harmonic_10Attackers "${ns3-libs}")

add_executable(shadowing_map_test ../src/propagation/test/spatially-correlated-shadowing-map-test.cc)
target_link_libraries(shadowing_map_test ${libpropagation})